@@ -89,7 +89,7 @@ Initiate dust removal process\.
 .SS Setting exposure parameters
 .HnE
 .PP
-\fB\-\-warnings\fR
+\fB-w\fR, \fB\-\-warnings\fR
 .RS 4
 Specify warning mode. The program prints out warning messages if the
 settings are invalid. It will not stop since the camera can fix most
